[package]
name = "oplfs_derive"
version = "0.1.0"
authors = ["Keith Gable <keith@ziggythehamster.sh>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
